# Humanoid-Soccer-Webots-ROS

./: CMakeLists.txt  README.md  my_robot_driver.xml  package.xml
include/Humanoid-Soccer-Webots-ROS/: MyRobotDriver.hpp
include/humanoid_soccer_webots_ros/: MyRobotDriver.hpp
launch/: robot_launch.py
resource/: robot.urdf
src/: MyRobotDriver.cpp
worlds/: world.wbt
